# Kraken

./: .gitignore  CMakeLists.txt  README.md  patch.cpp  patcher.py
include/: bridge.hpp  config.hpp  routines.hpp  stdafx.hpp  utils.hpp
include/fix/: autobrakefix.hpp  objcontupgrade.hpp  physic.hpp
include/hta/: CStr.h  CVector.h  pointers.hpp
include/hta/ai/: CollisionInfo.h  ComplexPhysicObj.h  ComplexPhysicObjPartDescription.h  ComplexPhysicObjPrototypeInfo.h  DecalData.h  GeomRepositoryItem.h  Modifier.h  Obj.h  Path.h  PhysicBody.h  PhysicObj.h  PrototypeInfo.h  SgNode.h  VehiclePrototypeInfo.h
include/hta/m3d/: Object.h
source/: config.cpp  entry.cpp  meta.rc
source/fix/: autobrakefix.cpp  objcontupgrade.cpp  physic.cpp
